--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">ApiFacebook</string>
     <string name="action_settings">Settings</string>
+    <string name="facebook_app_id">908734702567474</string>
 </resources>
